manifests/base/microservices/carts/carts-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: carts
  namespace: sock-shop
  labels:
    name: carts
    monitor: "true"
spec:
  selector:
    name: carts
  ports:
    - name: http
      port: 80
      targetPort: 80
